# robotframework-cache

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  docs.yaml
docs/: index.html  keywords.html
src/CacheLibrary/: CacheLibrary.py  __init__.py  constants.py
src/CacheLibrary/cache_file/: __init__.py  base.py  json_file.py  pickle_file.py
src/CacheLibrary/util/: __init__.py  dotdict.py  lock.py
test/acceptance/: run.robot
test/acceptance/test/: A01.robot  A02.robot  A03.robot  A04.robot  A05.robot  A06.robot  add-to-cache.robot  fetch-and-assert-from-file.robot  fetch-from-file.robot
test/integration/: run-keyword-and-cache-output.robot  run-multi-value.robot  run.robot  secret.py
